<resources>
    <string name="app_name">TideFlow</string>
    <string name="menu_home">Home</string>
    <string name="menu_graph">グラフ</string>
    <string name="menu_report">レポート</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_terms_of_service">利用規約</string>
    <string name="menu_app">アプリケーション</string>
    <string name="menu_start">開始</string>
    <string name="menu_stop">停止</string>
    <string name="menu_policy">ポリシー</string>
    <string name="menu_list_title">メニュー</string>

    <string name="calender_day_of_week_sunday">日</string>
    <string name="calender_day_of_week_monday">月</string>
    <string name="calender_day_of_week_tuesday">火</string>
    <string name="calender_day_of_week_wednesday">水</string>
    <string name="calender_day_of_week_thursday">木</string>
    <string name="calender_day_of_week_friday">金</string>
    <string name="calender_day_of_week_saturday">土</string>

    <string name="day_pager_def_str">-</string>

    <!-- res/values/strings.xml -->
    <string name="terms_text">
    本アプリをご利用いただく前に、以下の利用規約をお読みください。\n
    ・このアプリは潮汐情報の参考を提供するもので、正確性を保証しません。\n
    ・ユーザーが本アプリを使用したことによるいかなる損害も、当方は責任を負いません。\n
    ・情報は予告なく変更されることがあります。\n
    ・本規約に同意いただけない場合は、アプリをご利用いただけません。
</string>

</resources>