<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_start"
        android:icon="@drawable/ic_baseline_play_circle_24"
        android:orderInCategory="2"
        android:title="@string/menu_start"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_stop"
        android:icon="@drawable/ic_baseline_home_24"
        android:orderInCategory="2"
        android:title="@string/menu_stop"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_baseline_home_24"
        android:orderInCategory="2"
        android:title="@string/menu_refresh"
        app:showAsAction="ifRoom" />

</menu>